// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > tests/fixtures/basic.vue 1`] = `
"// basic.js
import { defineComponent } from 'vue';
import __MACROS_useVModel from '/vue-macros/define-models/use-vmodel';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

const name = "Foo";
const __default__ = defineComponent({
  name
});
var _sfc_main = /* @__PURE__ */ defineComponent({
  ...__default__,
  props: {
    title: { type: String, required: true },
    modelValue: { type: String, required: true }
  },
  emits: ["change", "update:modelValue"],
  setup(__props, { emit: __emit }) {
    const emit = __emit;
    let { modelValue } = __MACROS_useVModel("modelValue");
    const handleClick = () => {
      emit("change");
      modelValue.value = "hello, " + __props.title;
    };
    return () => {
    };
  }
});

var basic = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic as default };
"
`;

exports[`fixtures > tests/fixtures/boolean-prop.vue 1`] = `
"// boolean-prop.js
import { resolveComponent, openBlock, createElementBlock, Fragment, createCommentVNode, createVNode } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

const _sfc_main = {};

function _sfc_render(_ctx, _cache) {
  const _component_el_form = resolveComponent("el-form");

  return (openBlock(), createElementBlock(Fragment, null, [
    createCommentVNode(" disabled "),
    createVNode(_component_el_form, { inline: "" })
  ], 2112 /* STABLE_FRAGMENT, DEV_ROOT_FRAGMENT */))
}
var booleanProp = /*#__PURE__*/_export_sfc(_sfc_main, [['render',_sfc_render],__FILE__]);

export { booleanProp as default };
"
`;

exports[`fixtures > tests/fixtures/case-233.vue 1`] = `
"// case-233.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

const msg = "Hello";
var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: "case-233",
  props: {
    msg: { type: String, required: true, default: msg }
  },
  setup(__props) {
    return () => {
    };
  }
});

var case233 = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { case233 as default };
"
`;

exports[`fixtures > tests/fixtures/define-props-refs.vue 1`] = `
"// define-props-refs.js
import { defineComponent, toRefs } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: "define-props-refs",
  props: {
    foo: { type: String, required: true }
  },
  setup(__props) {
    const __MACROS_props = __props;
    const { foo } = toRefs(__MACROS_props);
    console.log(foo.value);
    foo.value = "hello";
    return () => {
    };
  }
});

var definePropsRefs = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { definePropsRefs as default };
"
`;

exports[`fixtures > tests/fixtures/error-diff-lang.vue 1`] = `[Error: [unplugin-vue-macros] <script> and <script setup> must have the same language type.]`;

exports[`fixtures > tests/fixtures/hoist-static.vue 1`] = `
"// hoist-static.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

const name = 'App';
const propName = 'title';
const __default__ = defineComponent({
  name,
});
const _sfc_main = /*#__PURE__*/Object.assign(__default__, {
  props: [propName],
  setup(__props) {







return () => {}
}

});
var hoistStatic = /*#__PURE__*/_export_sfc(_sfc_main, [__FILE__]);

export { hoistStatic as default };
"
`;

exports[`fixtures > tests/fixtures/hoist-static-scope.vue 1`] = `
"// hoist-static-scope.js
import { defineComponent, openBlock, createElementBlock } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

const [name] = (
  /* hoist-static*/
  ["VarCompName"]
);
const __default__ = defineComponent({
  name
});
var _sfc_main = /* @__PURE__ */ defineComponent({
  ...__default__,
  setup(__props) {
    const test = (name2) => name2;
    return (_ctx, _cache) => {
      return openBlock(), createElementBlock("div", null, "1");
    };
  }
});

var hoistStaticScope = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { hoistStaticScope as default };
"
`;

exports[`fixtures > tests/fixtures/mixed-define-props.vue 1`] = `
"// mixed-define-props.js
import { defineComponent, toRefs, toRef } from 'vue';
import __MACROS_normalizePropsOrEmits from '/vue-macros/define-prop/helper';
import __MACROS_useVModel from '/vue-macros/define-models/use-vmodel';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: "mixed-define-props",
  props: { ...__MACROS_normalizePropsOrEmits({
    foo: { type: String, required: false },
    baz: { type: String, required: true }
  }), ...__MACROS_normalizePropsOrEmits(["bar"]) },
  emits: ["update:baz"],
  setup(__props) {
    const __MACROS_props = __props;
    const { foo } = toRefs(__MACROS_props);
    const bar = toRef(__props, "bar");
    const { baz } = __MACROS_useVModel("baz");
    return () => {
    };
  }
});

var mixedDefineProps = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { mixedDefineProps as default };
"
`;

exports[`fixtures > tests/fixtures/short-emits.setup.tsx 1`] = `
"// short-emits.setup.js
import { defineComponent } from 'vue';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

var _sfc_main = /* @__PURE__ */ defineComponent({
  __name: "short-emits.setup",
  emits: ["update:modelValue"],
  setup(__props) {
    return () => {
    };
  }
});

var shortEmits_setup = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { shortEmits_setup as default };
"
`;

exports[`fixtures > tests/fixtures/vue2-model.vue 1`] = `
"// vue2-model.js
import { defineComponent } from 'vue';
import __MACROS_useVModel from '/vue-macros/define-models/use-vmodel';
import _export_sfc from '[NULL]/plugin-vue/export-helper';

const __default__ = defineComponent({
  name: "Foo",
  model: {
    prop: "value",
    event: "changeInput"
  }
});
var _sfc_main = /* @__PURE__ */ defineComponent({
  ...__default__,
  props: {
    title: { type: String, required: true },
    value: { type: String, required: true }
  },
  emits: ["change", "input", "changeInput"],
  setup(__props, { emit: __emit }) {
    const emit = __emit;
    let { modelValue, value } = __MACROS_useVModel(["modelValue", "value", "input"], ["value", void 0, "changeInput"]);
    const handleClick = () => {
      emit("change");
      modelValue.value = "hello, " + __props.title;
      value.value = "Word," + __props.title;
    };
    return () => {
    };
  }
});

var vue2Model = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { vue2Model as default };
"
`;
